[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Resources/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/background1.png" type="Texture" id=3]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -419, -122 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_right = 150.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="VBoxContainer"]
margin_top = 155.0
margin_right = 300.0
margin_bottom = 220.0
toggle_mode = true
text = "Fullscreen"

[node name="Music" type="Button" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 300.0
margin_bottom = 295.0
text = "Music"

[node name="Fun" type="Button" parent="VBoxContainer"]
margin_top = 305.0
margin_right = 300.0
margin_bottom = 370.0
toggle_mode = true
text = "Silly Mode"

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 380.0
margin_right = 300.0
margin_bottom = 445.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="VBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="toggled" from="VBoxContainer/Fun" to="." method="_on_Fun_toggled"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
